--- a/index.html
+++ b/index.html
@@ -9,53 +9,11 @@
 
 </head>
 <body>
-        <!-- <section class="one">
-            <div class="container-fluid col-12">
-            <h1 class="card-title text-light text-center fw-bolder" id="title">WEATHER APPLICATION</h1>
-                <div class="card col-5">
-                    <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-                <div class="row mx-auto my-2 bg-transparent col-12 col-lg-4">
-                    <p>the first phase</p>
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                        </div>
-                    </div>
-                    
-                
-                    <div>
-                        <p>the second phase</p>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-    </section>
-
-
-    <section class="two">
-        <div class="container-fluid text-center mt-5 pt-5">
+       <section class="one"  style="align-items:center; justify-content:center">
+        <div class="container-fluid text-center mx-auto mt-5 pt-5">
             <div class="row">
                 <!-- first div -->
-                <div class="col-5 me-5">
+                <div class="col-6 me-5 ms-5">
                     <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
@@ -109,6 +67,9 @@
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <a href="#" class="card-link">Card link</a>
+                                      <a href="#" class="card-link">Another link</a>
+
                                     </div>
                                   </div>
                             </div>
